--- a/app/comp/section1/Carousel/carousel.module.css
+++ b/app/comp/section1/Carousel/carousel.module.css
@@ -208,189 +208,13 @@ text-align: left;
 
 
 
-/* Адаптив: 2 карточки, затем 1 */
-/* @media (max-width: 1200px){
-    .card { flex-basis: var(--card-width); }
-    .navNext { right: 10%; left: auto; }
-    
-    .carousel {
-        height: calc(590px * 0.9);
-        --card-width: calc(360px * 0.9);
-    }
-    
-    .track {
-        gap: 25px;
-        padding: 0 12px;
-    }
-    
-    .lineText {
-        font-size: 32px;
-        line-height: 36px;
-    }
-    
-    .price {
-        font-size: 18px;
-    }
-    
-    .ratingValue {
-        font-size: 16px;
-    }
-} */
-
-/* @media (max-width: 900px){
-    .carousel {
-        height: calc(590px * 0.85);
-        --card-width: calc(360px * 0.85);
-    }
-    
-    .track {
-        gap: 20px;
-        padding: 0 10px;
-    }
-    
-    .lineText {
-        font-size: 30px;
-        line-height: 34px;
-    }
-    
-    .cardBottom {
-        padding: 14px 16px 18px 16px;
-    }
-} */
-
-/* @media (max-width: 768px){
-   
-    .card { flex-basis: var(--card-width); }
-    .navNext { right: 10%; left: auto; }
-   
-    .carousel {
-        height: calc(590px * 0.75);
-        --card-width: calc(360px * 0.75);
-    }
-    
-    .track {
-        gap: 18px;
-        padding: 0 8px;
-    }
-    
-    .lineText {
-        font-size: 28px;
-        line-height: 32px;
-    }
-    
-    .price {
-        font-size: 16px;
-    }
-    
-    .ratingValue {
-        font-size: 14px;
-    }
-    
-    .countryName {
-        font-size: 11px;
-    }
-    
-    .from {
-        font-size: 11px;
-        margin-top: 25px;
-    }
-    
-    .navNext {
-        width: 40px;
-        height: 40px;
-        right: 8%;
-    }
-} */
-
-/* @media (max-width: 650px){
-    .carousel {
-        height: calc(590px * 0.65);
-        --card-width: calc(360px * 0.65);
-    }
-    
-    .track {
-        gap: 15px;
-        padding: 0 6px;
-    }
-    
-    .lineText {
-        font-size: 24px;
-        line-height: 28px;
-    }
-    
-    .price {
-        font-size: 14px;
-    }
-    
-    .ratingValue {
-        font-size: 12px;
-    }
-    
-    .countryName {
-        font-size: 10px;
-    }
-    
-    .from {
-        font-size: 10px;
-        margin-top: 20px;
-    }
-    
-    .navNext {
-        width: 35px;
-        height: 35px;
-        right: 6%;
-    }
-} */
-
-/* @media (max-width: 550px){
-    .carousel {
-        height: calc(590px * 0.6);
-        --card-width: calc(360px * 0.6);
-    }
-    
-    .track {
-        gap: 12px;
-        padding: 0 5px;
-    }
-    
-    .lineText {
-        font-size: 22px;
-        line-height: 26px;
-    }
-    
-    .price {
-        font-size: 13px;
-    }
-    
-    .ratingValue {
-        font-size: 11px;
-    }
-    
-    .countryName {
-        font-size: 9px;
-    }
-    
-    .from {
-        font-size: 9px;
-        margin-top: 18px;
-    }
-    
-    .navNext {
-        width: 35px;
-        height: 35px;
-        right: 5%;
-    }
-    
-    .cardBottom {
-        padding: 12px 14px 16px 14px;
-        gap: 15px;
-    }
-} */
 
 @media (max-width: 480px){
     .carousel {
-        height: 550px ;
+        /* height: 550px ; */
+        height: 48.19vh;
         --card-width: 320px ;
+        
     }
     
      .track {
