--- a/app/comp/section1/Carousel/carousel.module.css
+++ b/app/comp/section1/Carousel/carousel.module.css
@@ -1,8 +1,10 @@
 .carousel {
     position: relative;
     width: 100%;
-    height: 590px;
-    --card-width: 360px;
+    /* height: 590px; */
+    height: 60dvh;
+    /* --card-width: 360px; */
+    --card-width: 35dvh;
 }
 
 .track {
@@ -212,7 +214,7 @@ text-align: left;
 @media (max-width: 480px){
     .carousel {
         /* height: 550px ; */
-        height: 50dvh;
+        height: 58dvh;
         --card-width: 77dvw ;
         margin-left: 4dvh;
         
