--- a/app/comp/section4/section4.module.css
+++ b/app/comp/section4/section4.module.css
@@ -408,7 +408,7 @@
   }
   
   .description {
-    width: 254px;
+    width: 234px;
     height: 185px;
     
     font-size: 16px;
@@ -435,14 +435,14 @@
   .bottomBlock {
    
     bottom: 7vh;
-    left: 38%;
+    left: 40%;
    
     gap: 2dvh;
     z-index: 3;
   }
   .bottomTitle {
-   
-    font-size: 36px;
+   width: 20dvh;
+    font-size: 32px;
     line-height: 38px;
   }
   .leftImage {
@@ -456,7 +456,7 @@
   
   .rightImage {
    
-    right: 4dvh;
+    right: 2dvh;
     top: 45dvh;
     width: 134.65px;
     height: 303.05px;
@@ -481,7 +481,7 @@
   .rightSmallDiamond {
    
     top: calc(43dvh + 323.05px - 40px); /* верхний край ромба на нижнем краю правой картинки */
-    right: calc(4dvh + 144.65px/2 - 24px); /* центрируем относительно правой картинки */
+    right: calc(2dvh + 144.65px/2 - 24px); /* центрируем относительно правой картинки */
     width: 38px;
     height: 70px;
    
@@ -498,105 +498,235 @@
 }
 
 
-@media (max-width: 480px) {
+@media (max-width: 650px) {
   .section4 {
-    /* Use dynamic viewport height for best compatibility */
+   
     height: 100dvh;
   }
   
   .heroBlock {
-   
-    gap: 0dvh;
+    position: absolute;
+    top: 3dvh;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+    width: 95%;
   }
   
   .title {
-    
-    font-size: 50px;
-   
-    line-height: 50px;
-   
+    font-size: 40px;
+    line-height: 42px;
+    text-align: center;
+    width:55%;
+    height: auto;
+    margin: 0;
   }
   
   .description {
-    width: 254px;
-    height: 185px;
-    
-    font-size: 16px;
-   
-    line-height: 160%;
-   
+    width: 85%;
+    height: auto;
+    font-size: 14px;
+    line-height: 150%;
+    text-align: center;
+    margin: 0;
   }
-  .backgroundImage {
-   
   
+  .backgroundImage {
     width: 100%;
     height: 80%;
-   
   }
+  
   .diamond {
-   
     top: 35dvh;
-   
-    width: 90px;
-    height: 180px;
-   
+    width: 70px;
+    height: 150px;
   }
   
   .bottomBlock {
-   
-    bottom: 7vh;
-    left: 38%;
-   
-    gap: 2dvh;
+   bottom: 50dvh;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* gap: 12vh; */
+    width: 95%;
+    height: auto;
     z-index: 3;
   }
-  .bottomTitle {
-   
-    font-size: 36px;
-    line-height: 38px;
-  }
-  .leftImage {
   
-    left: 7dvh;
-    top: 18dvh;
-    width: 127.76px;
-    height: 300px;
+  .bottomTitle {
+    position: absolute;
+    top: 4dvh;
+    left: 2dvh;
+    font-size: 32px;
+    line-height: 34px;
+    width: 45%;
+    margin: 0;
    
+  }
+  
+  .bottomText {
+    position: absolute;
+    top: 20dvh;
+    width: 50%;
+    align-self: flex-end;
+    text-align: left;
+  }
+  
+  .leftImage {
+    left: 5dvh;
+    top: 23dvh;
+    width: 100px;
+    height: 250px;
   }
   
   .rightImage {
-   
-    right: 4dvh;
-    top: 45dvh;
-    width: 134.65px;
-    height: 303.05px;
-   
+    right: 5dvh;
+    top: 35dvh;
+    width: 100px;
+    height: 250px;
   }
+  
   .additionalImage {
-   
-  display: none;
+    display: none;
   }
+  
   .smallDiamond {
-   
-    top: calc(17.5dvh + 307.67px - 40px); 
-    left: calc(7.1dvh + 137.76px/2 - 24px); /* центрируем относительно картинки */
-    width: 38px; /* 120px * 0.4 = 48px (на 60% меньше) */
-    height: 70px; /* 200px * 0.4 = 80px (на 60% меньше) */
- 
+    top: calc(20dvh + 250px - 30px);
+    left: calc(5dvh + 100px/2 - 15px);
+    width: 30px;
+    height: 60px;
   }
   
   .rightSmallDiamond {
-   
-    top: calc(43dvh + 323.05px - 40px); /* верхний край ромба на нижнем краю правой картинки */
-    right: calc(4dvh + 144.65px/2 - 24px); /* центрируем относительно правой картинки */
-    width: 38px;
-    height: 70px;
-   
+    top: calc(35dvh + 250px - 30px);
+    right: calc(5dvh + 100px/2 - 15px);
+    width: 30px;
+    height: 60px;
   }
   
   .additionalSmallDiamond {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .section4 {
    
-   display: none;
+    height: 100dvh;
+  }
+  
+  .heroBlock {
+    position: absolute;
+    top: 3dvh;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+    width: 95%;
+  }
+  
+  .title {
+    font-size: 40px;
+    line-height: 42px;
+    text-align: center;
+    width:55%;
+    height: auto;
+    margin: 0;
+  }
+  
+  .description {
+    width: 85%;
+    height: auto;
+    font-size: 14px;
+    line-height: 150%;
+    text-align: center;
+    margin: 0;
+  }
+  
+  .backgroundImage {
+    width: 100%;
+    height: 80%;
+  }
+  
+  .diamond {
+    top: 35dvh;
+    width: 60px;
+    height: 110px;
+  }
+  
+  .bottomBlock {
+   bottom: 50dvh;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* gap: 12vh; */
+    width: 95%;
+    height: auto;
+    z-index: 3;
+  }
+  
+  .bottomTitle {
+    position: absolute;
+    top: 4dvh;
+    left: 2dvh;
+    font-size: 32px;
+    line-height: 34px;
+    width: 60%;
+    margin: 0;
    
   }
+  
+  .bottomText {
+    position: absolute;
+    top: 25dvh;
+    width: 50%;
+    align-self: flex-end;
+    text-align: left;
+  }
+  
+  .leftImage {
+    left: 3dvh;
+    top: 25dvh;
+    width: 100px;
+    height: 250px;
+  }
+  
+  .rightImage {
+    right: 3dvh;
+    top: 35dvh;
+    width: 100px;
+    height: 250px;
+  }
+  
+  .additionalImage {
+    display: none;
+  }
+  
+  .smallDiamond {
+    top: calc(25dvh + 250px - 30px);
+    left: calc(3dvh + 100px/2 - 15px);
+    width: 30px;
+    height: 60px;
+  }
+  
+  .rightSmallDiamond {
+    top: calc(35dvh + 250px - 30px);
+    right: calc(3dvh + 100px/2 - 15px);
+    width: 30px;
+    height: 60px;
+  }
+  
+  .additionalSmallDiamond {
+    display: none;
+  }
+
 }
