--- a/app/comp/section5/section5.module.css
+++ b/app/comp/section5/section5.module.css
@@ -243,7 +243,7 @@
  }
 }
 
-@media (max-width: 620px) {
+@media (max-width: 650px) {
   .section5 {
    
      height: 38svh; 
@@ -289,7 +289,7 @@
   }
   .textBlock {
     position: absolute;
-    top: -20vh;
+    top: -15dvh;
    /* right: 60px; */
     height: auto;
     width: 200px;
@@ -316,32 +316,37 @@
 
 @media (max-width: 480px) {
   .section5 {
-    height: calc(var(--vh, 1vh) * 100);
-    /* height: 75vh;  */
-    /* padding: 60px 12px 100px; */
+   
+    height: 47dvh; 
+   
+  }
+  .contentRow {
+    position: relative;
+    height: 37dvh;
   }
   .imageBox {
-    /* position: absolute;
-    top: -300px; 
-    left: 10px;  */
-    margin-top: 20%;
+    
+    margin-top: -2dvh;
+    margin-left: -2dvh;
     width:160px;
     height: 350px;
   }
   /* Размещаем текст справа от изображения и выравниваем левый край */
   .textBlock {
-    left: calc(10px + 160px + 20px);
+  
+    right: 5dvh;
     width: calc(100% - (10px + 160px + 20px) - 12px);
   }
   .diamondRight {
-    right: -20px;
+    right: -2dvh;
    
   }
   .diamondBottom {
     bottom: -60px;
   }
   .text {
-    margin-top: 25vh;
+    width: 18dvh;
+    margin-top: 11dvh;
     font-size: clamp(16px, 6vw, 22px);
     line-height: 1.25;
   }
@@ -353,16 +358,24 @@
   .cloudLeft {
   
     left: 0px;
-    top: 20vh;
+    top: 5dvh;
     width: 250px;
     height: 170px;
    
     }
     .cloudRight {
-      top: 35vh;
+      top: 25vh;
     right: -200px;
     width: 500px;
     height: 150px;
+    }
+    .ctaButton {
+      position: absolute;
+      /* left: 50%; */
+      transform: translateX(-50%);
+      top: 35dvh; 
+      width: 60vw; 
+     /* max-width: none; */
     }
 }
 
