--- a/app/comp/section5/section5.module.css
+++ b/app/comp/section5/section5.module.css
@@ -331,7 +331,7 @@
     width:160px;
     height: 350px;
   }
-  /* Размещаем текст справа от изображения и выравниваем левый край */
+  /* Размещаем текст справа от изображения и выравниваем левый  */
   .textBlock {
   
     right: 5dvh;
