--- a/app/comp/section5/section5.module.css
+++ b/app/comp/section5/section5.module.css
@@ -1,7 +1,7 @@
 .section5 {
   width: 100%;
-  /* height: 70dvh; */
-  height: calc(var(--vh, 1vh) * 100);
+  height: 70dvh;
+  /* height: calc(var(--vh, 1vh) * 100); */
   background-color: #E0D2CA;
   position: relative;
  
@@ -237,7 +237,7 @@
 @media (min-width: 620px) and (max-width: 768px){
   .section5 {
    
-    height: 47svh; 
+    height: 47dvh; 
    
   
  }
@@ -246,7 +246,7 @@
 @media (max-width: 650px) {
   .section5 {
    
-     height: 38svh; 
+     height: 38dvh; 
      padding: 80px 16px 120px;
    
   }
@@ -317,8 +317,8 @@
 @media (max-width: 480px) {
   .section5 {
    
-    height: 47dvh; 
-   
+    height: 30dvh; 
+    padding: 0px 16px 0px;
   }
   .contentRow {
     position: relative;
@@ -326,7 +326,7 @@
   }
   .imageBox {
     
-    margin-top: -2dvh;
+    margin-top: 2dvh;
     margin-left: -2dvh;
     width:160px;
     height: 350px;
@@ -346,7 +346,7 @@
   }
   .text {
     width: 18dvh;
-    margin-top: 11dvh;
+    margin-top: 14dvh;
     font-size: clamp(16px, 6vw, 22px);
     line-height: 1.25;
   }
