--- a/app/comp/section4/section4.module.css
+++ b/app/comp/section4/section4.module.css
@@ -651,8 +651,9 @@
   }
   
   .backgroundImage {
+    margin-top: 2dvh;
     width: 100%;
-    height: 80%;
+    height: 70dvh;
   }
   
   .diamond {
@@ -696,15 +697,17 @@
   .leftImage {
     left: 3dvh;
     top: 25dvh;
-    width: 100px;
-    height: 250px;
+    /* width: 100px; */
+    width: 10dvh;
+    /* height: 250px; */
+    height: 22dvh;
   }
   
   .rightImage {
     right: 3dvh;
     top: 35dvh;
-    width: 100px;
-    height: 250px;
+    width: 10dvh;
+    height: 22dvh;
   }
   
   .additionalImage {
