--- a/app/comp/menu/menu.module.css
+++ b/app/comp/menu/menu.module.css
@@ -30,7 +30,7 @@
 }
 
 .navItem {
-  margin: 0 40px;
+  margin: 0 20px;
   color: rgba(0, 0, 0, 1);
   font-family: Forum;
   font-size: 16px;
@@ -174,11 +174,16 @@
 /* Планшеты */
 @media (max-width: 1024px) {
   .navItem {
-    margin: 0 25px;
+    margin: 0 13px;
     font-size: 14px;
     white-space: nowrap;
   }
-  .blockButton { right: 20px; }
+  .blockButton {
+   
+    right: 20px;
+    width: clamp(100px, 15vw, 136px);
+    aspect-ratio: 156 / 40;
+  }
   
   .menu {
     padding: 0 20px;
@@ -191,6 +196,11 @@
 
 /* Средние экраны (650-1024px) */
 @media (max-width: 768px) {
+  .navLinks {
+  
+    left: 40%;
+ 
+  }
   .navItem {
     margin: 0 15px;
     font-size: 13px;
@@ -254,7 +264,7 @@
   .navItem:after {
     bottom: -3px;
   }
-  .blockButton { top: 10px; right: 10px; width: clamp(110px, 32vw, 140px); }
+  .blockButton { top: 10px; right: 25px; width: clamp(110px, 32vw, 140px); }
   .image2 { bottom: -6px; }
   .image3 { top: -6px; }
 }
@@ -278,7 +288,7 @@
   .navItem {
     font-size: 14px;
   }
-  .blockButton { width: clamp(100px, 36vw, 130px); }
+  .blockButton { width: clamp(100px, 34vw, 130px);}
 }
 
 
